po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-25 14:19+0000\n"
+"PO-Revision-Date: 2016-05-26 10:49+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -24803,7 +24803,7 @@ msgid ""
 "before you can use Update multiple activities. Navigate to Administer > "
 "Customize Data and Screens > Profiles to configure a Profile. Consult the "
 "online Administrator documentation for more information."
-msgstr ""
+msgstr "U moet een profiel aanmaken met daarin de %1 velden die u wilt bewerken voordat u de batch wijzigen van meerdere activiteiten kunt gebruiken. Navigeer naar Beheer > Aanpassen Gegevens en Schermen > CiviCRM Profiel om een profiel te configureren. Lees de online beheerders documentatie voor meer informatie."
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print selected rows"
@@ -24847,23 +24847,23 @@ msgstr "Jaarlijkse opties"
 
 #: CRM/Contact/ActionMapping.php
 msgid "Please select a specific date field."
-msgstr ""
+msgstr "Selecteer a.u.b. een dataveld."
 
 #: CRM/Contact/ActionMapping.php
 msgid "You may only select one contact field per reminder"
-msgstr ""
+msgstr "U mag maar één contactveld per herinnering selecteren."
 
 #: CRM/Contact/ActionMapping.php
 msgid "Please select whether the reminder is sent each year."
-msgstr ""
+msgstr "Geef hier aan of de herinnering elk jaar verzonden moet worden."
 
 #: CRM/Contact/BAO/GroupNestingCache.php
 msgid "We detected a cycle which we can't handle. aborting"
-msgstr ""
+msgstr "Het systeem heeft een cyclus ontdekt die het niet aan kan. De cyclus wordt afgebroken."
 
 #: CRM/Contact/BAO/Query.php
 msgid "Tagged %1 %2"
-msgstr ""
+msgstr "Gekenmerkt %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "State/Province %1 %2 %3"
@@ -24883,11 +24883,11 @@ msgstr "Record bijgewerkt"
 
 #: CRM/Contact/DAO/ACLContactCache.php
 msgid "ACL Contact Cache ID"
-msgstr ""
+msgstr "ACL contact-cache-id"
 
 #: CRM/Contact/DAO/GroupContactCache.php
 msgid "Group Contact Cache ID"
-msgstr ""
+msgstr "Groep contact-cache-id"
 
 #: CRM/Contact/DAO/SavedSearch.php CRM/Core/DAO/Mapping.php
 #: CRM/Core/DAO/MappingField.php
@@ -24896,23 +24896,23 @@ msgstr ""
 
 #: CRM/Contact/DAO/SubscriptionHistory.php
 msgid "Group Membership History ID"
-msgstr ""
+msgstr "Groepslidmaatschap history-id"
 
 #: CRM/Contact/DAO/SubscriptionHistory.php
 msgid "Group Membership Action Date"
-msgstr ""
+msgstr "Groepslidmaatschap action-date"
 
 #: CRM/Contact/DAO/SubscriptionHistory.php
 msgid "Group Membership Action"
-msgstr ""
+msgstr "Groepslidmaatschap action"
 
 #: CRM/Contact/DAO/SubscriptionHistory.php
 msgid "Group Membership Status"
-msgstr ""
+msgstr "Groepslidmaatschap status"
 
 #: CRM/Contact/DAO/SubscriptionHistory.php
 msgid "Group Membership Tracking"
-msgstr ""
+msgstr "Groepslidmaatschap tracking"
 
 #: CRM/Contact/Form/Edit/Website.php CRM/Core/BAO/CustomField.php
 #: CRM/Core/BAO/UFGroup.php
@@ -24977,19 +24977,19 @@ msgid ""
 "Update multiple contacts requires that all selected contacts be the same "
 "basic type (e.g. all Individuals OR all Organizations...). Please modify "
 "your selection and try again."
-msgstr ""
+msgstr "Bij het gelijktijdig wijzigen van meerdere contacten is het verplicht dat alle geselecteerde contacten hetzelfde basistype (bijv.: Persoon, Organisatie...) hebben. "
 
 #: CRM/Contact/Form/Task/PickProfile.php
 msgid ""
 "The contact type selected for Update multiple contacts does not have a "
 "corresponding profile. Please set up a profile for %1s and try again."
-msgstr ""
+msgstr "Het geselecteerde contacttype voor het wijzigen van meerdere contacten heeft geen overeenkomend profiel. Zorg eerst voor een profiel voor %1 en probeer het daarna opnieuw."
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid ""
 "Matching this contact based on the de-dupe rule would cause an external ID "
 "conflict"
-msgstr ""
+msgstr "Het koppelen van dit contact met de overeenkomstregel zou leiden tot een extern probleem met het ID."
 
 #: CRM/Contact/Page/AJAX.php
 msgid "flip"
@@ -25001,7 +25001,7 @@ msgstr "Er is niets om samen toe voegen."
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "You do not have permission to force merge duplicate contact records"
-msgstr ""
+msgstr "U heeft niet het recht om dubbele contact-records samen te voegen."
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "Merging Duplicates.."
@@ -25097,19 +25097,19 @@ msgstr "E-mail - versturen of inplannen via CiviMail"
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "WARNING: The setting (%1) has been reverted."
-msgstr ""
+msgstr "WAARSCHUWING: De instelling (%1) is teruggezet naar de oude waarde."
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "WARNING: The setting (%1) is overridden and could not be reverted."
-msgstr ""
+msgstr "WAARSCHUWING: De instelling (%1) wordt genegeerd en kan niet worden teruggezet naar de oude waarde."
 
 #: CRM/Core/BAO/StatusPreference.php
 msgid "You can not pass a severity level higher than 7."
-msgstr ""
+msgstr "U heeft geen toegang als het veiligheidsniveau hoger dan 7 is."
 
 #: CRM/Core/BAO/StatusPreference.php
 msgid "Invalid string passed as severity level."
-msgstr ""
+msgstr "De waarde van het veiligheidsniveau is ongeldig."
 
 #: CRM/Core/BAO/UFField.php CRM/Export/BAO/Export.php
 msgid "Date Received"
@@ -25132,7 +25132,7 @@ msgid ""
 "enabled in your browser settings. Please check this setting and enable "
 "cookies (if they are not enabled). Then try again. If this error persists, "
 "contact the site administrator for assistance."
-msgstr ""
+msgstr "De gewenste webpagina kan niet worden geladen. Controleer in uw webbrowser of cookies worden toegestaan). Probeer het daarna opnieuw, neem contact op met de beheerder als u hulp nodig heeft."
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Schedule Contact ID"
@@ -25470,7 +25470,7 @@ msgstr ""
 msgid ""
 "If you only insert one shortcode, you can choose to override all page "
 "content with the content of the shortcode."
-msgstr ""
+msgstr "Als u alleen een shortcode invoert, dan kunt u ervoor kiezen om alle inhoud van de pagina te vervangen met de inhoud van de shortcode."
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Don't override"
@@ -25484,11 +25484,11 @@ msgstr "Overschrijf pagina-inhoud"
 msgid ""
 "A payment processor configured for this page might be disabled (contact the "
 "site administrator for assistance)."
-msgstr ""
+msgstr "Een voor deze pagina geconfigureerde betaalmethode is mogelijk uitgeschakeld (neem voor hulp contact op met de beheerder)."
 
 #: CRM/Core/Form.php
 msgid "Payment approval failed with message :"
-msgstr ""
+msgstr "De goedkeuring van de betaling is mislukt met de foutmelding:"
 
 #: CRM/Core/Payment/Dummy.php
 msgid "transaction failed"
@@ -25500,7 +25500,7 @@ msgstr ""
 
 #: CRM/Core/Payment/PaymentExpressIPN.php
 msgid "DPS error: Unable to parse XML response from DPS."
-msgstr ""
+msgstr "DPS-fout: De XML-response van DPS kan niet verwerkt worden."
 
 #: CRM/Core/Payment.php
 msgid ""
@@ -25508,14 +25508,14 @@ msgid ""
 "information stored in your CiviCRM database, but will NOT be sent to the "
 "payment processor. You must enter the same changes using the payment "
 "processor web site."
-msgstr ""
+msgstr "De wijzigingen die u hier doet worden alleen in CiviCRM vastgelegd, ze worden niet doorgestuurd naar de betaalmethode. U moet dus dezelfde wijzigingen ook daar invoeren."
 
 #: CRM/Core/Payment.php
 msgid ""
 "Use this form to change the amount or number of installments for this "
 "recurring contribution. Changes will be automatically sent to the payment "
 "processor. You can not change the contribution frequency."
-msgstr ""
+msgstr "Op dit scherm kunt u het bedrag of het aantal termijnen van deze periodieke bijdrage wijzigen. Wijzigingen worden automatisch doorgegeven aan de betaalmethode. U kunt niet de frequentie van de bijdrage wijzigen."
 
 #: CRM/Core/Payment.php
 msgid "Online Event Registration: "
@@ -25673,7 +25673,7 @@ msgstr "U heeft geen toegang tot deze pagina"
 msgid ""
 "No user/contact ID was specified, so the Profile cannot be used in edit "
 "mode."
-msgstr ""
+msgstr "Er is geen gebruiker of contact bepaald, daarom kan het profiel niet worden gebruikt in de edit-mode."
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Create Mode"
