--- a/po/ro_RO/menu.po
+++ b/po/ro_RO/menu.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-24 17:46+0000\n"
+"PO-Revision-Date: 2016-05-26 12:55+0000\n"
 "Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
@@ -344,7 +344,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Email Invoice"
-msgstr ""
+msgstr "Chitanta Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
