--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-23 20:06+0000\n"
+"PO-Revision-Date: 2016-05-29 20:16+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -6585,25 +6585,25 @@ msgstr "A Pénzügyi típus szerinti hozzáférés beállítás engedélyezése 
 msgid ""
 "A \"WYSIWYG\" (What You See Is What You Get) is a rich-text editor, like a "
 "mini word-processor, for editing HTML content in CiviCRM."
-msgstr ""
+msgstr "A CiviCRM HTML tartalmát szerkesztheti  egy \"WYSIWYG\" (What You See Is What You Get) fejlett szerkesztővel, ami olyan mint egy mini szövegszerkesztő."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Select 'CKEditor' for the built-in WYSIWYG option. You can customize the "
 "toolbar buttons and other settings by clicking \"Configure CKEditor.\""
-msgstr ""
+msgstr "Válassza a 'CKEditor' a beépített WYSIWYG opcióhoz. Az eszköztárak gombjait kiválaszthatja és más beállításokat a \"CKEditor beállítása\" linkre kattintva."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Select 'Textarea' if you want users to type text and/or HTML code into plain"
 " text fields."
-msgstr ""
+msgstr "Válassza ki a 'Szövegterület' opciót, ha azt akarja, hogy felhasználók szöveg és/vagy HTML kódot a sima szöveg mezőkbe írják be."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Other WYSIWYG editors are available for download from the <a %1>CiviCRM "
 "Extension Directory</a>."
-msgstr ""
+msgstr "Más WYSIWYG szerkesztők hozzáférhetőek a letöltéshez a <a \"%1\">\"CiviCRM kiterjesztés könyvtárban\"</a>."
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
@@ -6642,7 +6642,7 @@ msgstr "Pénzösszeg pénzszimbólum nélkül történő kijelzés formátuma."
 msgid ""
 "You may override the ts() function in CiviCRM by defining your own "
 "translation function."
-msgstr ""
+msgstr "A ts() függvényt felülírhatja a CivCRM-ben meghatározva a saját fordító függvényt."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Configure CiviCRM for your country and language."
@@ -6677,25 +6677,25 @@ msgid ""
 "These variables are computed automatically using "
 "<tt>civicrm.settings.php</tt> and its options, such as "
 "<tt>CIVICRM_TEMPLATE_COMPILEDIR</tt>."
-msgstr ""
+msgstr "Ezek a változók automatikusan kiszámításra kerülnek a <tt>civicrm.settings.php</tt> fájl és beállításai felhasználásával, mint például a  <tt>CIVICRM_TEMPLATE_COMPILEDIR</tt>."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "You may configure these upload directories using absolute paths or path "
 "variables."
-msgstr ""
+msgstr "Beállíthatja ezeket a feltöltési könyvtárakat az abszolút útvonal vagy útvonal változók felhasználásával."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "If you modify the defaults, make sure that your web server has write access "
 "to the directories."
-msgstr ""
+msgstr "Ha módosítja az alapértelmezett értékeket, győződjön meg arról, hogy a webszervernekírási joga van a könyvtárakhoz."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid ""
 "When migrating a site to a new server, the paths and URLs of your CiviCRM "
 "installation may change. "
-msgstr ""
+msgstr "Amikor a weboldalt egy új szerverre migrálja,  a CiviCRM telepítésének az útvonala és az URL-ek megváltozhatnak."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid ""
@@ -6703,7 +6703,7 @@ msgid ""
 "form to clear caches or to reset paths to their defaults. If you need "
 "further customizations, then update the <a href=\"%1\">Directories</a> and "
 "<a href=\"%2\">Resource URLs</a>."
-msgstr ""
+msgstr "A régi útvonalak és URL-ek megmaradhatnak néhány adatbázisrekordban. Használja ezt az űrlapot a cach-ek kiürítésére vagy az útvonalak alapértelmezett értékeinek visszaállítására. Ha további testreszabásra van szüksége, frissítse a <a href=\"%1\">Könyvtárak</a> és a <a href=\"%2\">Erőforrás URL-ek</a> beállításokat."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -6713,7 +6713,7 @@ msgid ""
 "and configure your webserver to support SSL connections. Consult your "
 "hosting provider or web-server documentation for more information on "
 "obtaining and installing SSL certificates."
-msgstr ""
+msgstr "Ha olyan fizetés feldolgozó szolgáltatást használ, amely a bankkártya és számlázási információt az <strong>ön weboldalán</strong>  gyűjti.  Nagyon javasolt az <strong> SSL tanúsítvány</strong> beszerzése és a weboldal beállítása az SSL kapcsolatok támogatására. Lépjen kapcsolatba a webtárhely szolgáltatójával vagy a webszerver dokumentációban nézzen utána az SSL tanúsítvány beszerzés és telepítés részleteiről."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid ""
@@ -6722,81 +6722,81 @@ msgid ""
 "Using https to connect to secure2.authorize.net insures that the connection "
 "is encrypted, but it's possible that CiviCRM is actually connecting to an "
 "attacker and the attacker is connecting to secure2.authorize.net."
-msgstr ""
+msgstr "Például, a fizetés feldolgozásához az Authorize.net-en keresztül, a CiviCRM-nek lekérést kell küldenie https://secure2.authorize.net/gateway/transact.dll. A https felhasználásával kapcsolódnia kell a secure2.authorize.net-hez biztosítandó azt, hogy a kapcsolat titkosított, de az is lehetséges, hogy a CiviCRM egy támadóhoz csatlakozik és a támadó csatlakozik a secure2.authorize.net-hez."
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "URL Variables"
-msgstr ""
+msgstr "URL változók"
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
 "These settings define the URLs used to access CiviCRM resources (CSS files, "
 "Javascript files, images, etc.)."
-msgstr ""
+msgstr "CiviCRM erőforrások hozzáféréséhez használt URL-eket (CSS fájlok, Javascript fájlok,képek, stb.) határozzák meg ezek a beállítások."
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid "You may configure these settings using absolute URLs or URL variables."
-msgstr ""
+msgstr "Beállíthatja ezeket az opciókat az abszolút útvonal vagy útvonal változók felhasználásával."
 
 #: templates/CRM/Admin/Form/WordReplacements.hlp
 msgid ""
 "Change all occurrences of a word or phrase in CiviCRM screens (e.g. replace "
 "all occurrences of 'Contribution' with 'Donation')."
-msgstr ""
+msgstr "Változtasson meg egy szót vagy kifejezést a CiviCRM képernyőkön (pl. cserélje le az összes 'Hozzájárulás'-t 'Adomány'-ra)."
 
 #: templates/CRM/Admin/Form/WordReplacements.tpl
 msgid ""
 "Use <strong>Word Replacements</strong> to change all occurrences of a word "
 "or phrase in CiviCRM screens (e.g. replace all occurrences of 'Contribution'"
 " with 'Donation')."
-msgstr ""
+msgstr "Használja <strong>Szó cseréket</strong> egy szó vagy kifejezés lecserélésére a CiviCRM képernyőkön (pl. cserélje le az összes 'Hozzájárulás'-t 'Adomány'-ra)."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Chaining"
-msgstr ""
+msgstr "Api láncolás"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Chains allow you to execute api calls on the results of this one."
-msgstr ""
+msgstr "A láncolás lehetővé teszi az api hívások végrehajtását ezeken az eredményeken."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Example: When creating a contact, you can chain the Email.create api to add "
 "email addresses for them."
-msgstr ""
+msgstr "Például: Amikor egy kapcsolatot hoz létre, láncolhatja az Email.create api-t az e-mail címek hozzáadásához. "
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Disambiguation: api chains are different from joins in that chaining "
 "executes a separate api call for every result returned from the main call."
-msgstr ""
+msgstr "Egyértelművé tétel: api láncok különböznek a összekötőktől abban, hogy  összeláncolva hajtják végre az egyes api hívásokat az egyes a fő hívásból visszakapott egyes eredményeken."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Joins"
-msgstr ""
+msgstr "Api összekötők"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Join this api call to return values from or filter on a related entity."
-msgstr ""
+msgstr "Kösse össze ezt az api hívást az érték visszaadásához vagy szűréséhez a kapcsolódó egyeden. "
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "The new fields will be selectable from the \"Params\" and \"Fields to "
 "return\" lists."
-msgstr ""
+msgstr "Az új mezők kiválaszthatók lesznek a \"Paraméterek\" és a \"Visszatérési mezők\" listáiból."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Example: If the api entity is Email, you can also fetch the display name of "
 "the contact this email belongs to."
-msgstr ""
+msgstr "Például: Ha az api egyed Email, letudja hívni ezen kapcsolathoz tartozó kijelzési nevet is."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Disambiguation: Joins are different from api chaining in that joins execute "
 "as a single SELECT query, and only work for api \"get\" operations."
-msgstr ""
+msgstr "Egyértelművé tétel: az összekötők különböznek az api láncoktól abban, hogy a összekötők úgy hajtódnak végre mint egy SELECT lekérdezés, és csak az api \"get\" műveleteinél működik."
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid ""
@@ -6806,23 +6806,23 @@ msgid ""
 "civicrm_financial_trxn tables. Before publishing an extension on civicrm.org"
 " that does any of this, please ask for a special bookkeeping code review for"
 " the extension."
-msgstr ""
+msgstr "Az auditáltathatóság fontossága miatt, a kiterjesztések fejlesztői részére nagyon javasolt  annak elkerülése, hogy hozzáadjon, módosítsa, vagy töröljön bejegyzéseket a civicrm_financial_item, civicrm_entity_financial_trxn, and civicrm_financial_trxn táblákból. Mielőtt kiadna egy kiterjesztést a civicrm.org-on amelyik megteszi a fentieket, kérje a speciális könyvelési kód felülvizsgálatot. "
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Join on:"
-msgstr ""
+msgstr "Összekötők: "
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Skin"
-msgstr ""
+msgstr "Héj"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Plugins"
-msgstr ""
+msgstr "Kiterjesztések"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
-msgstr ""
+msgstr "További opcionális jellemzők kiválasztása:"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6830,7 +6830,7 @@ msgid ""
 "recurring basis. Messages used for membership renewal reminders, as well as "
 "event and activity related reminders should be created via <a "
 "href=\"%1\">Schedule Reminders</a>."
-msgstr ""
+msgstr "Az üzenet sablonok lehetővé teszik hasonló e-mailek vagy levelek ismétlődő elkészítését. A tagság megújítási emlékeztetőket, és az esemény vagy tevékenységhez kapcsolódó emlékeztetőket az <a href=\"%1\">Ütemezett emlékeztetőkön</a> keresztül kell létrehozni."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6838,29 +6838,29 @@ msgid ""
 "However, subscribe, unsubscribe and opt-out messages are configured at <a "
 "href=\"%1\">Administer > CiviMail > Headers, Footers and Automated "
 "Messages</a>."
-msgstr ""
+msgstr "Az üzenet sablonokat használhatja a CiviKörlevél (tömeges e-mail) leveleiben is. Ugyanakkor, feliratkozás, leiratkozás, összes leiratkozás üzeneteihez beállíthatók az <a href=\"%1\">Adminisztrálás >CiviKörlevél > Fejlécek, láblécek, automatikus üzenetek</a> menüpont alatt. "
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
-msgstr ""
+msgstr "Karbantartás jelentések menü"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid ""
 "This will add links for all currently active reports to the \"Reports\" menu"
 " under the relevant component. If you have added report instances to other "
 "menus, they will be moved to \"Reports\".  Are you sure?"
-msgstr ""
+msgstr "Ez linkeket ad hozzá a jelenleg aktív jelentésekhez a \"jelentések\" menü alatt a vonatkozó komponens. Ha jelentéseket adott más menüelemhez, ezek áthelyeződnek a \"Jelentések\" alá. Biztos benne?"
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
 "You can limit the recipient of the reminder to contacts with the specified "
 "preferred language. You can also choose to add contacts that have no "
 "preferred language defined."
-msgstr ""
+msgstr "Az kapcsolatokhoz küldhető emlékeztető címzettjeit korlátozhatja a megadott preferált nyelven. Választhatja azt is, hogy hozzáad  olyan kapcsolatot, amelyiknek nincs preferált nyelve megadva."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
 "This is the communication language. If there are template translation or "
 "tokens, they will be localized accordingly. By default, the system default "
 "language will be used."
-msgstr ""
+msgstr "Ez a kommunikációs nyelv. Ha van sablon fordítás, vagy tokenek, hasonlóképpen lesznek lokalizálva. Alapértelmezetten, a rendszer alapértelmezett nyelve lesz használva."
