po: update po/hu_HU/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/contribute.po
+++ b/po/hu_HU/contribute.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-23 16:02+0000\n"
+"PO-Revision-Date: 2016-05-29 20:23+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -5288,11 +5288,11 @@ msgstr "ÖSSZESEN %1"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Amount Credited"
-msgstr ""
+msgstr "LESS jóváírt összeg"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Amount Paid"
-msgstr ""
+msgstr "LESS befizetett összeg"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "AMOUNT DUE:"
@@ -5340,7 +5340,7 @@ msgstr "Jóváírási értesítés száma:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "LESS Credit to invoice(s)"
-msgstr ""
+msgstr "LESS számlázandó hitel(ek)"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "REMAINING CREDIT"
