po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-29 19:39+0000\n"
+"PO-Revision-Date: 2016-05-30 12:42+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4465,7 +4465,7 @@ msgid ""
 "This contact is a special one for the contact information associated with "
 "the CiviCRM installation for this domain. No one is allowed to delete it "
 "because the information is used for special system purposes."
-msgstr "Dit contact is nodig voor de contact informatie behorend bij de CiviCRM installatie van dit domein. Het kan niet verwijderd worden omdat de informatie nodig is voor het systeem."
+msgstr "Dit contact is nodig voor de contactinformatie behorend bij de CiviCRM-installatie van dit domein. Het kan niet verwijderd worden omdat de informatie nodig is voor het systeem."
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid ""
@@ -6885,7 +6885,7 @@ msgstr "Gereserveerde Groep?"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "DashletID"
-msgstr "Dashlet-ID"
+msgstr "Dashlet-id"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet Domain"
@@ -16155,7 +16155,7 @@ msgid ""
 "HTML messages have more visual impact, allow you to include images, and may "
 "be more readable if you are including links to website pages. However, you "
 "can also configure a simple sms."
-msgstr "HTML berichten zijn visueel aantrekkelijker, u kunt dan afbeeldingen gebruiken, ook zijn links naar websites beter leesbaar. U kunt echter ook een eenvoudig SMS-bericht gebruiken."
+msgstr "HTML-berichten zijn visueel aantrekkelijker, u kunt dan afbeeldingen gebruiken, ook zijn links naar websites beter leesbaar. U kunt echter ook een eenvoudig SMS-bericht gebruiken."
 
 #: templates/CRM/Contact/Form/Task/SMS.tpl
 msgid ""
@@ -24527,14 +24527,14 @@ msgid ""
 "A new organization contact has been added as the default domain contact "
 "using the information from your Organization Address and Contact Info "
 "settings: '%1'."
-msgstr "Een organisatie contact is toegevoegd als standaard domein contact met informatie van uw organisatie adres en contact informatie instellingen: '%1'."
+msgstr "Een organisatie-contact is toegevoegd als standaardcontact voor het domein met informatie van uw organisatie-adres en contactinformatie-instellingen: '%1'."
 
 #: CRM/Upgrade/Incremental/php/FourThree.php
 msgid ""
 "The existing organization contact record for '%1' has been marked as the "
 "default domain contact, and has been updated with information from your "
 "Organization Address and Contact Info settings."
-msgstr "Het bestaande organisatie contact voor '%1' is nu het standaard domein contact, het is bijgewerkt met informatie van uw organisatie adres en contact informatie instellingen."
+msgstr "Het bestaande organisatie-contact voor '%1' is nu het standaardcontact voor het  domein, het is bijgewerkt met informatie van uw organisatie adres en contactinformatie-instellingen."
 
 #: CRM/Upgrade/Incremental/php/FourThree.php
 msgid ""
@@ -24892,7 +24892,7 @@ msgstr "Groep contact-cache-id"
 #: CRM/Contact/DAO/SavedSearch.php CRM/Core/DAO/Mapping.php
 #: CRM/Core/DAO/MappingField.php
 msgid "Mapping ID"
-msgstr ""
+msgstr "Kaart-entiteit"
 
 #: CRM/Contact/DAO/SubscriptionHistory.php
 msgid "Group Membership History ID"
@@ -25136,7 +25136,7 @@ msgstr "De gewenste webpagina kan niet worden geladen. Controleer in uw webbrows
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Schedule Contact ID"
-msgstr ""
+msgstr "Actie Plannen contact-id"
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Schedule"
@@ -25144,7 +25144,7 @@ msgstr "Inplannen"
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Date And Time"
-msgstr ""
+msgstr "Actie datum en tijd"
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Error?"
@@ -25152,15 +25152,15 @@ msgstr "Fout?"
 
 #: CRM/Core/DAO/ActionMapping.php
 msgid "Action Mapping ID"
-msgstr ""
+msgstr "Actie kaart-id"
 
 #: CRM/Core/DAO/ActionMapping.php
 msgid "Action Mapping Entity"
-msgstr ""
+msgstr "Actie kaart-entiteit"
 
 #: CRM/Core/DAO/ActionMapping.php
 msgid "Action Mapping Entity Value"
-msgstr ""
+msgstr "Actie kaart-entiteit waarde"
 
 #: CRM/Core/DAO/ActionMapping.php
 msgid "Value Label"
@@ -25180,7 +25180,7 @@ msgstr "Entiteit einddatum"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "Filter Contact Language"
-msgstr ""
+msgstr "Filter contacttaal"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "Communication Language"
@@ -25352,19 +25352,19 @@ msgstr "Einde offset"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Prev Next Cache ID"
-msgstr ""
+msgstr "Bladeren cache-id"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Prev Next Entity Table"
-msgstr ""
+msgstr "Bladeren entiteittabel"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Prev Next Entity ID 1"
-msgstr ""
+msgstr "Bladeren volgende entiteit-id 1"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Prev Next Entity ID 2"
-msgstr ""
+msgstr "Bladeren volgende entiteit-id 2"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Cache Key"
@@ -25372,7 +25372,7 @@ msgstr "Cache-key"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Prev Next Data"
-msgstr ""
+msgstr "Bladeren gegevens"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Is Selected"
@@ -25464,7 +25464,7 @@ msgstr "Testen"
 
 #: CRM/Core/Form/ShortCode.php
 msgid "Search/Public Directory"
-msgstr ""
+msgstr "Zoek/openbare map"
 
 #: CRM/Core/Form/ShortCode.php
 msgid ""
@@ -25496,7 +25496,7 @@ msgstr "transactie mislukt"
 
 #: CRM/Core/Payment/FirstData.php
 msgid "First Data - recurring payments not implemented"
-msgstr ""
+msgstr "Eerste gegevens, periodieke betalingen niet geïmplementeerd"
 
 #: CRM/Core/Payment/PaymentExpressIPN.php
 msgid "DPS error: Unable to parse XML response from DPS."
@@ -25535,11 +25535,11 @@ msgstr "Periodieke bijdragen"
 
 #: CRM/Core/SelectValues.php js/model/crm.uf.js
 msgid "Expose Publicly"
-msgstr ""
+msgstr "Openbaar tonen"
 
 #: CRM/Core/SelectValues.php js/model/crm.uf.js
 msgid "Expose Publicly and for Listings"
-msgstr ""
+msgstr "Openbaar tonen en voor lijsten"
 
 #: CRM/Core/SelectValues.php
 msgid "Contribution Date Received"
@@ -25643,7 +25643,7 @@ msgstr "Exportopties"
 
 #: CRM/Friend/DAO/Friend.php
 msgid "Friend ID"
-msgstr ""
+msgstr "Vriend-id"
 
 #: CRM/Friend/DAO/Friend.php
 msgid "Thank You Title"
@@ -25663,7 +25663,7 @@ msgstr "Prijsset entiteit-id"
 
 #: CRM/Price/DAO/PriceSetEntity.php
 msgid "Entity IF"
-msgstr ""
+msgstr "Entiteit IF"
 
 #: CRM/Price/Form/Option.php
 msgid "You do not have permission to access this page"
@@ -25677,15 +25677,15 @@ msgstr "Er is geen gebruiker of contact bepaald, daarom kan het profiel niet wor
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Create Mode"
-msgstr ""
+msgstr "Gebruik - toevoegingsmode"
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Edit Mode"
-msgstr ""
+msgstr "Gebruik - wijzigingsmode"
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Listings Mode"
-msgstr ""
+msgstr "Gebruik - lijstmode"
 
 #: CRM/Utils/Check/Component/Case.php
 msgid "Case type \"%1\" has duplicate XML files (\"%2\" and \"%3\")"
@@ -26013,7 +26013,7 @@ msgstr "Vertrouwelijke bestanden leesbaar"
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Browseable Directories"
-msgstr ""
+msgstr "Door te bladeren mappen"
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Unsafe Files"
@@ -26202,7 +26202,7 @@ msgstr "Postcode"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Force Merge Selected Duplicates"
-msgstr ""
+msgstr "Geforceerd samenvoegen geselecteerde duplicaten"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid ""
@@ -26214,7 +26214,7 @@ msgstr "Hierdoor wordt het batchprogramma uitgevoerd om dubbele contacten samen 
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Safe Merge Selected Duplicates"
-msgstr ""
+msgstr "Veilig samenvoegen geselecteerde duplicaten"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid ""
@@ -26280,21 +26280,21 @@ msgid ""
 "it visible to the public and potentially searchable in the Profile Search "
 "form ('Expose Publicly' or 'Expose Publicly and for Listings')?  ('User and "
 "User Admin Only') fields can still be used for Edit and Create mode."
-msgstr ""
+msgstr "Is dit veld openbaar en kan er via een profiel op worden gezocht ('Openbaar tonen', 'Openbaar tonen en voor lijsten') of is veld dan verborgen ('Alleen voor gebruiker en beheerder')?  (Een verborgen veld kan wel gebruikt worden bij het wijzigen en aanmaken.)"
 
 #: templates/CRM/UF/Form/Field.hlp
 msgid ""
 "When visibility is 'Expose Publicly and for Listings', users can also click "
 "the field value when viewing a contact in order to locate other contacts "
 "with the same value(s) (i.e. other contacts who live in Poland)."
-msgstr ""
+msgstr "Bij de zichtbaarheid 'Openbaar tonen en voor lijsten' van een veld kan een gebruiker (als er een contact getoond wordt) klikken op de waarde om naar andere contacten te zoeken met dezelfde waarde. (Bijvoorbeeld: bij het land zoeken naar andere contacten die in België wonen)."
 
 #: templates/CRM/UF/Page/Group.hlp
 msgid ""
 "The HTML Form Snippet code will display a form consisting of the active "
 "fields in this Profile. You can copy this HTML code and paste it into any "
 "block or page on your website where you want to collect contact information."
-msgstr ""
+msgstr "De HTML-code hieronder maakt een formulier aan met de actieve profielvelden. Knip en plak deze code op een plek waar u contactinformatie wilt gaan verzamelen."
 
 #: templates/CRM/UF/Page/Group.hlp
 msgid ""
@@ -26304,14 +26304,14 @@ msgid ""
 " to "
 "\"https://yourdomain.com/sites/all/modules/civicrm/bower_components/jquery/dist/jquery.min.js?r=dXCgD\")"
 " you will be able to use the snippet on any website."
-msgstr ""
+msgstr "Door het wijzigen van de relatieve URL's in het stukje code naar absolute URL's (voorbeeld: wijzig \"/sites/all/modules/civicrm/bower_components/jquery/dist/jquery.min.js?r=dXCgD\" in  \"https://yourdomain.com/sites/all/modules/civicrm/bower_components/jquery/dist/jquery.min.js?r=dXCgD\") kunt u deze code op elke website gebruiken."
 
 #: templates/CRM/UF/Page/Group.tpl
 msgid ""
 "The HTML code below will display a form consisting of the active fields in "
 "this Profile. You can copy this HTML code and paste it into any block or "
 "page on your website where you want to collect contact information."
-msgstr ""
+msgstr "De onderstaande HTML-code maakt een formulier met de actieve profielvelden. Knip en plak deze HTML-code op een plaats waar u de contactinformatie wilt verzamelen."
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Showing %1 to %2 of %3 entries"
@@ -26347,7 +26347,7 @@ msgstr "Betaalmethodes"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
-msgstr ""
+msgstr "Relatieve datumfilters"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact Deleted by Merge"
@@ -26378,7 +26378,7 @@ msgstr "Detailrapport bijdragen"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Overzicht van toezeggingen inclusief het bedrag, de status, de volgende betaaldatum, het betaalde totaalbedrag, ..."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Summary Report"
@@ -26411,7 +26411,7 @@ msgstr "Tekstvak"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Credit/Contra Revenue Account is"
-msgstr ""
+msgstr "Credit/Tegen opbrengst-account is"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback Account is"
@@ -26711,7 +26711,7 @@ msgstr "Controleren op CiviCRM-updates: dit is belangrijk om uw database veilig 
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Events - Registration Transferred Notice"
-msgstr ""
+msgstr "Evenementen - registratie verzonden melding"
 
 #: CRM/Upgrade/Form.php
 msgid ""
@@ -26753,14 +26753,14 @@ msgstr "U hebt \"TinyMCE\" als editor ingesteld, maar deze is niet langer onderd
 msgid ""
 "CiviCRM no longer integrates with the \"%1 Default Editor.\" Your wysiwyg "
 "setting has been reset to the built-in CKEditor. <a %2>Learn more...</a>"
-msgstr ""
+msgstr "CiviCRM ondersteunt de editor \"%1\" niet meer. Uw wysiwyg-instelling is gewijzigd in de ingebouwde CKEditor. <a %2>Lees meer...</a>"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
 "CiviCRM now includes the easy-to-use CKEditor Configurator. To customize the"
 " features and display of your wysiwyg editor, visit the <a %1>Display "
 "Preferences</a> page. <a %2>Learn more...</a>"
-msgstr ""
+msgstr "CiviCRM ondersteunt nu de configurator van CKEditor. Om de functies en het uiterlijk van deze editor naar uw wensen in te stellen, klik <a %1>hier</a>. <a %2>Lees meer...</a>"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid ""
@@ -26773,7 +26773,7 @@ msgstr "De standaardversie van het volgende  berichtsjabloon is gewijzigd: <ul><
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "The custom fatal error template setting has been removed."
-msgstr ""
+msgstr "Het aangepaste sjabloon voor de foutafhandeling is verwijderd."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
