--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-05-24 18:24+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-30 12:01+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -434,7 +434,7 @@ msgid ""
 "these activities in a single database, creating efficiencies and new "
 "opportunities for communities to better communicate and benefit from "
 "relationships with their community members."
-msgstr "De CiviCRM module slaat informatie op over mensen in een gemeenschap, zoals hun e-mails, donaties, enz. CiviCRM kan gebruikt worden als een stand-alone contacten beheersysteem, waarbij het mogelijk is om te integreren met  systemen voor bulkmailings, vrijwilligers beheer, petities en evenementenkalenders. CiviCRM stelt organisaties in staat om deze activiteiten te bundelen in een enkele database. Hierdoor wordt de efficiëntie vergroot en is de organisatie beter in staat te communiceren met haar relaties waardoor er nieuwe mogelijkheden en voordelen worden gecreëerd."
+msgstr "De CiviCRM module slaat informatie op over mensen in een gemeenschap, zoals hun e-mails, donaties, enz. CiviCRM kan gebruikt worden als een stand-alone contacten beheersysteem, waarbij het mogelijk is om te integreren met  systemen voor bulkmailings, vrijwilligersbeheer, petities en evenementenkalenders. CiviCRM stelt organisaties in staat om deze activiteiten te bundelen in een enkele database. Hierdoor wordt de efficiëntie vergroot en is de organisatie beter in staat te communiceren met haar relaties waardoor er nieuwe mogelijkheden en voordelen worden gecreëerd."
 
 #: drupal/civicrm.module
 msgid ""
@@ -453,7 +453,7 @@ msgid ""
 "a way to allow community members ('users') to update their own information, "
 "as well as share some of that information with others. Finally, you can "
 "configure custom activity types such as volunteering or attending events."
-msgstr "De CiviCRM module maakt het mogelijk om contacten te creëren of te importeren. Relaties tussen contacten, zoals \"zelfde huishouding\" kunnen opgeslagen worden. Er zijn 2 groepen contacten : statische groepen met een vaste lijst contacten en dynamische (smart) groepen, die bepaalde eigenschappen gemeen hebben. Een voorbeeld : Iedereen die in de Benelux woont en het afgelopen jaar als vrijwilliger voor uw organisatie heeft gewerkt. CiviCRM staat ook de wat minder formele indeling van contacten of groepen toe. Door specifieke velden in de database van CiviCRM te gebruiken, is het mogelijk, om specifieke ledeninformatie op te bouwen binnen uw gemeenschap. Op die manier kan er een lijst worden gecreëerd van specifieke vakkennis en voorkeuren van leden in de gemeenschap. De Profiel sectie geeft de leden de mogelijkheid, om hun gegevens bij te werken en te delen met anderen. Ook is het mogelijk, om activiteitstypes (zoals vrijwilligerswerk, of evenementen) op te stellen."
+msgstr "De CiviCRM-module maakt het mogelijk om contacten te creëren of te importeren. Relaties tussen contacten, zoals \"zelfde huishouding\" kunnen opgeslagen worden. Er zijn 2 groepen contacten : statische groepen met een vaste lijst contacten en dynamische (smart) groepen, die bepaalde eigenschappen gemeen hebben. Een voorbeeld : Iedereen die in de Benelux woont en het afgelopen jaar als vrijwilliger voor uw organisatie heeft gewerkt. CiviCRM staat ook de wat minder formele indeling van contacten of groepen toe. Door specifieke velden in de database van CiviCRM te gebruiken, is het mogelijk, om specifieke ledeninformatie op te bouwen binnen uw gemeenschap. Op die manier kan er een lijst worden gecreëerd van specifieke vakkennis en voorkeuren van leden in de gemeenschap. De Profiel-sectie geeft de leden de mogelijkheid, om hun gegevens bij te werken en te delen met anderen. Ook is het mogelijk, om activiteitstypes (zoals vrijwilligerswerk, of evenementen) op te stellen."
 
 #: drupal/civicrm.module
 msgid "You can:"
