--- a/po/ne_NP/case.po
+++ b/po/ne_NP/case.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dilip Raj Baral <mail@diliprajbaral.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-30 13:12+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-31 09:24+0000\n"
+"Last-Translator: Dilip Raj Baral <mail@diliprajbaral.com>\n"
 "Language-Team: Nepali (Nepal) (http://www.transifex.com/civicrm/civicrm/language/ne_NP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,15 +21,15 @@ msgstr ""
 #: xml/templates/message_templates/case_activity_html.tpl
 #: xml/templates/message_templates/case_activity_text.tpl
 msgid "View activity"
-msgstr ""
+msgstr "गतिविधि हेर्नुहोस"
 
 #: CRM/Case/BAO/Case.php
 msgid "no subject"
-msgstr ""
+msgstr "विषय छैन"
 
 #: CRM/Case/BAO/Case.php
 msgid "(multiple)"
-msgstr ""
+msgstr "(धेरै)"
 
 #: CRM/Case/BAO/Case.php
 msgid "Move To Case"
