--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 16:20+0000\n"
+"PO-Revision-Date: 2016-05-31 16:59+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -3445,7 +3445,7 @@ msgstr "Inscription (réelle)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Don't see your event listed? Try \"Search All or by Date Range\" above."
-msgstr "Vous ne trouvez pas votre cas dans la liste? Essayez \"Rechercher Tout\" ou \"par plage de dates\" ci-dessus."
+msgstr "Vous ne trouvez pas votre évènement dans la liste ? Essayez l'option « Rechercher tout ou par intervalle de date » ci-dessus."
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "No available Events match your search criteria. Suggestions:"
