--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:51+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-31 19:07+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgstr "Geen enquête-sid-parameter. Kan handtekening niet verwerken."
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr "Petitie Id en/of Activiteit Id is niet van het type Positive."
+msgstr "Petitie-id en/of activiteit-id is niet van het type Positive."
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
