--- a/po/ne_NP/pledge.po
+++ b/po/ne_NP/pledge.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dilip Raj Baral <mail@diliprajbaral.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-30 13:12+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-31 09:26+0000\n"
+"Last-Translator: Dilip Raj Baral <mail@diliprajbaral.com>\n"
 "Language-Team: Nepali (Nepal) (http://www.transifex.com/civicrm/civicrm/language/ne_NP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,11 +24,11 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Balance Amount"
-msgstr ""
+msgstr "शेष राशि"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Date"
-msgstr ""
+msgstr "अर्को भुक्तानी मिति"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Amount"
