--- a/po/ne_NP/financial.po
+++ b/po/ne_NP/financial.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dilip Raj Baral <mail@diliprajbaral.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-30 13:12+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-31 09:25+0000\n"
+"Last-Translator: Dilip Raj Baral <mail@diliprajbaral.com>\n"
 "Language-Team: Nepali (Nepal) (http://www.transifex.com/civicrm/civicrm/language/ne_NP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,7 +23,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "सृजना गर्ने"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
@@ -30,7 +31,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "पछिल्लो परिमार्जन गर्ने"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
