--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 13:27+0000\n"
+"PO-Revision-Date: 2016-05-31 19:07+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -168,7 +168,7 @@ msgstr "Dossier staat in de prullenbak"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type ID"
-msgstr "Dossiertype-ID"
+msgstr "Dossiertype-id"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Name"
