po: update po/nl_NL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 07:07+0000\n"
+"PO-Revision-Date: 2016-05-31 18:19+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -218,7 +218,7 @@ msgstr "Bijdragebedragen"
 
 msgctxt "menu"
 msgid "Membership Section"
-msgstr "Lidmaatschapgedeelte"
+msgstr "Lidmaatschapsgedeelte"
 
 msgctxt "menu"
 msgid "Include Profiles"
@@ -916,7 +916,7 @@ msgstr "Dubbele contacten zoeken en samenvoegen"
 
 msgctxt "menu"
 msgid "Dedupe Exceptions"
-msgstr "Deduplicatie-uitzonderingen"
+msgstr "Overeenkomstregel uitzonderingen"
 
 msgctxt "menu"
 msgid "Add User"
@@ -952,7 +952,7 @@ msgstr "Activiteiten importeren"
 
 msgctxt "menu"
 msgid "Import Multi-value Custom Data"
-msgstr "Aangepaste gevens met meerdere waarden importeren"
+msgstr "Aangepaste gegevens met meerdere waarden importeren"
 
 msgctxt "menu"
 msgid "Upgrade CiviCRM"
@@ -1684,7 +1684,7 @@ msgstr "Deelnemerrollen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Participant Listing Options"
-msgstr "Opties voor deelnemerlijsten"
+msgstr "Opties voor deelnemerslijsten"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
