--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-21 15:00+0000\n"
+"PO-Revision-Date: 2016-05-31 18:00+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2242,7 +2242,7 @@ msgstr "SQL voor rapport tonen"
 
 #: CRM/Report/Info.php
 msgid "View sql used in CiviReports"
-msgstr "In CiviReports gebruikte SQL tonen"
+msgstr "In CiviReport gebruikte SQL tonen"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
@@ -2267,4 +2267,4 @@ msgstr "Weet u zeker dat u dit rapport wilt verwijderen? Dit kan niet ongedaan g
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
-msgstr "Linke naar"
+msgstr "Link naar"
