po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-21 16:25+0000\n"
+"PO-Revision-Date: 2016-05-31 18:23+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1331,7 +1331,7 @@ msgstr "De mailing is opgeslagen en wordt verzonden."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr "Mailing definieren"
+msgstr "Mailing definiëren"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1914,7 +1914,7 @@ msgid ""
 "method, CiviCRM will choose the best option for each user: If an email is "
 "marked \"Bulk\" then it will be used; otherwise, the email marked "
 "\"Primary\" will be used."
-msgstr "Automatisch: Als u dit voor de locatie en de selectiemethode kiest, dan kiest CiviCRM per contact de beste optie. Als het een massamail is, dan wordt het-e-mailadres voor massa-mail gebruikt - in andere gevallen het primaire e-mailadres."
+msgstr "Automatisch: Als u dit voor de locatie en de selectiemethode kiest, dan kiest CiviCRM per contact de beste optie. Als het een massamail is, dan wordt het e-mailadres voor massa-mail gebruikt, in andere gevallen het primaire e-mailadres."
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid ""
@@ -2031,7 +2031,7 @@ msgid ""
 "not being sent, ask the system administrator or technical support contact "
 "for your site to verify that the automated task (&quot;cron job&quot;) is "
 "running - and how frequently."
-msgstr "<strong>Tip voor probleemoplossing</strong> - Als blijkt dat de mailing niet verzonden wordt, neem dan contact op met de beheerder of de technische helpdesk om te controleren of de automatische taak (de &quot;crontaak&quot;) loopt - en met welke frequentie."
+msgstr "<strong>Tip voor probleemoplossing</strong> - Als blijkt dat de mailing niet verzonden wordt, neem dan contact op met de beheerder of de technische helpdesk om te controleren of de automatische taak (de &quot;cronjob&quot;) loopt en met welke frequentie."
 
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid ""
