po: update po/nl_NL/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -3,15 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2014-2015
+# HanV <han.velthuis@home.nl>, 2014-2016
 # Kevin Levie <kevin@levity.nl>, 2016
 # Maurice Snellen <maurice@snellen.xs4all.nl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 08:42+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-31 18:30+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -357,7 +357,7 @@ msgstr "Kon geen verbinding maken met de databaseserver."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr "Kon geen schrijfvergrendeling krijgen op de datbasetabel."
+msgstr "Het locken van de databasetabel is mislukt."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
