po: update po/nl_NL/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-22 14:42+0000\n"
+"PO-Revision-Date: 2016-05-31 18:47+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -676,7 +676,7 @@ msgstr "Overeenkomstregel"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Require participant approval?"
-msgstr "Deelnemergoedkeuring vereist?"
+msgstr "Goedkeuring deelnemer vereist?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Approval message"
@@ -1396,7 +1396,7 @@ msgstr "Deelnames verwijderen"
 #: CRM/Event/Form/Task/Delete.php
 msgid "%count participant deleted."
 msgid_plural "%count participants deleted."
-msgstr[0] "%count deelneemer verwijderd."
+msgstr[0] "%count deelnemer verwijderd."
 msgstr[1] "%count deelnemers verwijderd."
 
 #: CRM/Event/Form/Task/ParticipantStatus.php
@@ -2186,7 +2186,7 @@ msgid ""
 " must first enable the Participant Statuses used by the approval work-flow "
 "(Administer » CiviEvent » Participant Statuses). Then reload this form and "
 "check 'Require participant approval?'."
-msgstr "U kunt evenementen ook zo configureren dat administratieve goedkeuring nodig is voordat deelnemers hun inschrijving kunnen afronden. Om deze functie in te kunnen schakelen dient u eerst de deelnemersstatussen die door de goedkeuringswerkstroom worden gebruikt in te schakelen (Beheer &raquo; CiviEvent &raquo; Deelnemersstatussen). Keer vervolgens terug naar dit formulier en vink het selectievakje 'Deelnemergoedkeuring vereist' aan."
+msgstr "U kunt evenementen ook zo configureren dat administratieve goedkeuring nodig is voordat deelnemers hun inschrijving kunnen afronden. Om deze functie in te kunnen schakelen dient u eerst de deelnemersstatussen die door de goedkeuringswerkstroom worden gebruikt in te schakelen (Beheer &raquo; CiviEvent &raquo; Deelnemersstatussen). Keer vervolgens terug naar dit formulier en vink het selectievakje 'Goedkeuring deelnemer vereist?' aan."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3738,7 +3738,7 @@ msgstr "Registratie overgedragen"
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "A cancellation email has been sent to %1."
-msgstr "De annulatie is per e-mail verzonden naar %1."
+msgstr "De annulering is per e-mail verzonden naar %1."
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
@@ -3748,14 +3748,14 @@ msgstr "Bedankt"
 msgid ""
 "Registration for this event cannot be cancelled or transferred once the "
 "event has begun. Contact the event organizer if you have questions."
-msgstr "De registratie voor dit evenement kan niet worden geannuleerd of verplaast als het evenement is begonnen. Neem contact op met de organisator als u vragen heeft."
+msgstr "De registratie voor dit evenement kan niet worden geannuleerd of verplaatst als het evenement is begonnen. Neem contact op met de organisator als u vragen heeft."
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
 "Registration for this event cannot be cancelled or transferred less than %1 "
 "hours prior to the event's start time. Contact the event organizer if you "
 "have questions."
-msgstr "De registratie voor dit evenement kan niet worden geannuleerd of verplaast als het minder dan %1 uur voor het begin van het evenement is. Neem contact op met de organisator als u vragen heeft."
+msgstr "De registratie voor dit evenement kan niet worden geannuleerd of verplaatst als het minder dan %1 uur voor het begin van het evenement is. Neem contact op met de organisator als u vragen heeft."
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer or Cancel Registration"
@@ -3831,7 +3831,7 @@ msgstr "Maximum aantal extra deelnemers"
 msgid ""
 "Limit the number of additional participants that can be registered in a "
 "single booking."
-msgstr "Maximeer indien gewenst het aantal extra deelnemers dat aangemeld kan worden in een enkele boeking."
+msgstr "Maximaliseer indien gewenst het aantal extra deelnemers dat aangemeld kan worden bij een enkele boeking."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3867,7 +3867,7 @@ msgid ""
 "<strong>Automated refunds for cancellations are NOT currently "
 "supported.</strong> Participants who have paid for an event will be notified"
 " that cancellations are not refundable."
-msgstr "<strong>Terugbetaling bij een annulering wordt nu NIET automatisch ondersteund.</strong> Deelnemers die betaald hebben krijgen een melding dat bij annulatie er geen terugbetaling is."
+msgstr "<strong>Terugbetaling bij een annulering wordt nu NIET automatisch ondersteund.</strong> Deelnemers die betaald hebben krijgen een melding dat bij annulering er geen terugbetaling is."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Cancellation or Transfer Time Limit"
