po: update po/nl_NL/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 14:06+0000\n"
+"PO-Revision-Date: 2016-05-31 18:35+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -155,7 +155,7 @@ msgstr "Belasting Financieel Account?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Tax Rate"
-msgstr "Financieel Account Belastingstarief"
+msgstr "Financieel Account Belastingtarief"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Reserved Financial Account?"
@@ -443,7 +443,7 @@ msgstr "Een belastbaar account moet het financieel account type Bijtelling hebbe
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Please enter value for tax rate"
-msgstr "Vul een waarde in voor het belastingstarief"
+msgstr "Vul een waarde in voor het belastingtarief"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Tax Rate Should be between 0 - 100"
@@ -523,7 +523,7 @@ msgid ""
 "income account \"%2\". That income account, along with standard financial "
 "accounts \"%3\", \"%4\" and \"%5\" have been linked to the financial type. "
 "You may edit or replace those relationships here."
-msgstr "Uw financieel type \"%1\" is aangemaakt, tesamen met een bijbehorend account \"%2\" voor het inkomen. Dit account, is net als de standaard financiele accounts \"%3\", \"%4\" en \"%5\" gekoppeld aan het financieel type. U kunt deze relaties hier wijzigen of vervangen."
+msgstr "Uw financieel type \"%1\" is aangemaakt, tezamen met een bijbehorend account \"%2\" voor het inkomen. Dit account, is net als de standaard financiële accounts \"%3\", \"%4\" en \"%5\" gekoppeld aan het financieel type. U kunt deze relaties hier wijzigen of vervangen."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialType.tpl
